--- a/hxds-mis-api/pom.xml
+++ b/hxds-mis-api/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.leis</groupId>
+    <artifactId>hxds-mis-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>hxds-mis-api</name>
+    <description>hxds-mis-opi</description>
+
     <parent>
         <groupId>com.leis</groupId>
         <artifactId>hxdj</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.leis</groupId>
-    <artifactId>bff-driver</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>bff-driver</name>
-    <description>bff-driver</description>
 
     <properties>
         <java.version>15</java.version>
@@ -33,10 +34,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
@@ -46,19 +49,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.openfeign.form</groupId>
-            <artifactId>feign-form</artifactId>
-            <version>3.8.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.openfeign.form</groupId>
-            <artifactId>feign-form-spring</artifactId>
-            <version>3.8.0</version>
         </dependency>
 
         <dependency>
@@ -84,21 +78,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-spring-boot-2-webmvc</artifactId>
             <version>3.1.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.leis</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -114,9 +102,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.leis</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
         <!-- txlcn 分布式事务 -->
@@ -147,6 +134,10 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -176,9 +167,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.7.RELEASE</version>
+                <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.leis.hxds.bff.driver.BffDriverApplication</mainClass>
+                    <mainClass>com.leis.hxds.mis.api.HxdsMisApiApplication</mainClass>
+                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
