--- a/hxds-dr/src/main/resources/application.yml
+++ b/hxds-dr/src/main/resources/application.yml
@@ -16,21 +16,21 @@ spring:
   cloud:
     inetutils:
       #??????Nacos??IP??
-      preferred-networks: 127.0.0.1
+      preferred-networks: 192.168.241.130
     nacos:
       #??????web??????????
       config:
         group: DEFAULT_GROUP
         file-extension: yaml
-        server-addr: 127.0.0.1:8848
-        prefix: ${spring.application.name]
+        server-addr: 192.168.241.130:8848
+        prefix: ${spring.application.name}
         namespace: hxds
       discovery:
         #??????Nacos??????discovery:
         namespace: hxds
         username: nacos
         password: nacos
-        server-addr: 127.0.0.1:8848
+        server-addr: 192.168.241.130:8848
         heart-beat-interval: 1000
         heart-beat-timeout: 1000
         group: DEFAULT_GROUP
@@ -39,7 +39,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc://mysql://localhost:3307/hxds?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=Asia/Shanghai
+      url: jdbc:mysql://192.168.241.130:3307/hxds?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
       username: root
       password: abc123456
       initial-size: 4
@@ -79,7 +79,7 @@ springdoc:
 
 tx-lcn:
   client:
-    manager-address: 127.0.0.1:8070
+    manager-address: 192.168.241.130:8070
 
 feign:
   client:
