--- a/hxds-cst/src/main/resources/application.yml
+++ b/hxds-cst/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc://mysql://localhost:3307/hxds?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=Asia/Shanghai
+      url: jdbc:mysql://192.168.241.130:3307/hxds?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
       username: root
       password: abc123456
       initial-size: 4
