--- a/hxds-tm/src/main/resources/application.properties
+++ b/hxds-tm/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=TransactionManager
 server.port=7970
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.241.131:12005/tx-manager?characterEncoding=UTF-8&serverTimeZone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:12005/tx-manager?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=abc123456
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.redis.host=192.168.241.131
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=abc123456
 spring.redis.database=10
