--- a/hxds-nebula/pom.xml
+++ b/hxds-nebula/pom.xml
@@ -120,6 +120,13 @@
             <artifactId>minio</artifactId>
             <version>8.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.187</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
