--- a/hxds-vhr/src/main/resources/application.yml
+++ b/hxds-vhr/src/main/resources/application.yml
@@ -53,6 +53,18 @@ spring:
       test-on-borrow: false
       test-on-return: false
 
+  redis:
+    database: 4
+    host: localhost
+    port: 6379
+    password: abc123456
+    jedis:
+      pool:
+        max-active: 1000
+        max-wait: -1ms
+        max-idle: 16
+        min-idle: 8
+
   servlet:
     multipart:
       enabled: true
